@@ -1,3 +1,7 @@
+2009-Dec-03 weaver	Tag V01-08-01.  Enabled select mask in the event builder.  Fixed data
+			corruption associated with event builder "cache misses" (on split events).
+			Tagged top-level xtc with IncompleteContribution damage when cache-miss chunk
+			writes beyond end of xtc payload (rce only - last chunk size is not maximum).
 2009-Nov-18 weaver	Tag V01-06-01.  Changed ObserverLevel to take a mask of event-level nodes to monitor.
 2009-Nov-12 weaver	Fix to CameraManager to configure only on Configure (not BeginCalib yet).  Fix to 
 			SegmentLevel and InletWireServer to properly dissolve/allocate the stream (handling
